src/terraform/modules/elasticsearch/templates/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  namespace: elasticsearch
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-http@kubernetescrd
spec:
  rules:
    - host: kibana.infrastructure.${domain-name}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elastic-kb-kb-http
                port:
                  number: 5601
  tls:
  - secretName: es-cert
    hosts:
    - kibana.infrastructure.${domain-name}
